# CS323-Compilers-2020fall

./: .gitattributes  .gitignore  LICENSE  README.md  syntax.txt  token.txt
lab01/: CMakeLists.txt  hello_world.c  judge.sh  main.c
lab02/ipaddr/: CMakeLists.txt  Makefile  judge.sh  lex.l
lab02/wc/: CMakeLists.txt  judge.sh
lab03/calc/: .gitignore  CMakeLists.txt  Makefile  calc_test.py  judge.sh  lex.l  syntax.y
lab03/parentheses/: .gitignore  CMakeLists.txt  Makefile  data.pickle  judge.sh  paren_test.py  syntax.y
lab1/: Makefile  linked_list.c  linked_list.h  ll_test.py
lab12/: .gitignore  Makefile  README.md  heap_exp.py  heap_showcase.c  heapchunks.c  stack_showcase.c
lab12/heap_hack/: exp.py  heap_hack.c
lab12/stack_hack/: exp.py  stack_hack.c
lab2/ipaddr/: data.pickle  ip_test.py
lab2/wc/: Makefile  inferno3.txt  lex.l
lab3/calc/: Makefile  calc_test.py  lex.l  syntax.y
lab3/parentheses/: Makefile  lex.l  syntax.y
lab4/: .gitignore  Makefile  jsonparser_test.py  lex.l  syntax.y
lab4/data/: .gitignore
lab5/: Makefile  symtab.h  symtab_bt.c  symtab_ht.c  symtab_ll.c  test.py
lab6/: readme.txt
lab7/: readme.txt
lab8/: Makefile  jsonchecker_test.py  lex.l  syntax.y
lab8/data/: case_a.json  case_b.json  case_c.json  case_d.json  case_e.json
project1/: CMakeLists.txt  Makefile  enviorment.sh  judge.sh
project1/test/: test_1_r01.out  test_1_r12.out
project2/: Makefile
project3/: readme.txt
project3/sample/: test03.ir
project4/: Makefile  main.c  mips32.c  mips32.h  tac.c  tac.h
